# homebase

./: .gitignore  README.md
docs/: control-plane.md  current-state.md  docs-index.md  final-architecture.md  homebase-cli-checklist.md  homebase-cli-development-plan.md  nas-migration.md  network-and-access-policy.md  node-roles.md  storage-and-backup.md  system-overview.md
homebase-cli/: README.md  inventory.ini  pyproject.toml
homebase-cli/config/: nodes.toml
homebase-cli/docs/: stack-and-structure.md
homebase-cli/scripts/: bootstrap-homebase.sh
homebase-cli/src/homebase_cli/: __init__.py  __main__.py  cli.py  client.py  docs_reader.py  inventory.py  output.py  packaging.py  paths.py  registry.py  resources.py  runtime.py  scanner.py  selftest.py  settings.py
homebase-cli/tests/: test_cli.py  test_client.py  test_docs_reader.py  test_inventory.py  test_packaging.py  test_registry.py  test_resources.py  test_scanner.py  test_settings.py
scripts/: install-homebase.ps1  install-homebase.sh
