[project]
name = "homebase-cli"
version = "0.1.37"
description = "CLI workspace for homebase."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    "PyYAML>=6.0,<7.0",
]

[project.scripts]
homebase = "homebase_cli.cli:main"
hb = "homebase_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
